Nexus bank full stack app/nexusbank/devops/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nexusbank
  labels:
    name: nexusbank
