Nexus bank full stack app/nexusbank/devops/k8s/admin-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: nexusbank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
        - name: admin-service
          image: nexusbank/admin-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: nexusbank
spec:
  selector:
    app: admin-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
