Nexus bank full stack app/nexusbank/devops/k8s/config-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: nexusbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: nexusbank/config-server:latest
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: nexusbank
spec:
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
