Nexus bank full stack app/nexusbank/devops/k8s/eureka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: nexusbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: nexusbank/eureka-server:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: nexusbank
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
